[package]
name = "uption"
version = "0.4.1"
authors = ["Olli Paakkunainen <olli@paakkunainen.fi>", "Adarsh Krishnan <adarshk7@gmail.com>"]
description = """
A tool to collect and export network performance metrics on devices like
WLAN Pi and Raspberry Pi.
"""
readme = "README.md"
license = "MIT"
keywords = ["network", "wifi", "metrics"]
categories = ["command-line-utilities"]
edition = "2018"
homepage = "https://github.com/uption/uption"
repository = "https://github.com/uption/uption"
documentation = "https://github.com/uption/uption/wiki"
exclude = [".github/*"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
crossbeam-channel = "0.4"
csv = "1.1"
ctrlc = "3.1"
fern = "0.6"
log = "0.4"
rand = "0.7"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1", features = ["serde"] }

[dev-dependencies]
mockito = "0.25"
rstest = "0.6"

[package.metadata.deb]
license-file = ["LICENSE"]
depends = "libgcc1, libc6, systemd"
section = "utils"
priority = "optional"
conf-files = ["/etc/uption/uption.toml", "/etc/systemd/system/uption.service"]
assets = [
    ["target/release/uption", "/usr/bin/", "755"],
    ["uption.toml", "/etc/uption/", "644"],
    ["build/uption.service", "/etc/systemd/system/", "644"],
]
