[package]
authors = [
  "Olli Paakkunainen <olli@paakkunainen.fi>",
  "Adarsh Krishnan <adarshk7@gmail.com>",
]
categories = ["command-line-utilities"]
description = """
A tool to collect and export network performance metrics on devices like
WLAN Pi and Raspberry Pi.
"""
documentation = "https://github.com/uption/uption/wiki"
edition = "2018"
exclude = [".github/*"]
homepage = "https://github.com/uption/uption"
keywords = ["network", "wifi", "metrics"]
license = "MIT"
name = "uption"
readme = "README.md"
repository = "https://github.com/uption/uption"
version = "0.5.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
crossbeam-channel = "0.5"
ctrlc = "3.1"
fern = "0.6"
log = "0.4"
rand = "0.7"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
trust-dns-client = { version = "0.19", default-features = false }
url = { version = "2.1", features = ["serde"] }

[dev-dependencies]
mockito = "0.28"
rstest = "0.6"
assert_cmd = "1.0"

[package.metadata.deb]
assets = [
  ["target/release/uption", "/usr/bin/", "755"],
  ["uption.toml", "/etc/uption/", "644"],
  ["build/uption.service", "/etc/systemd/system/", "644"],
]
conf-files = ["/etc/uption/uption.toml", "/etc/systemd/system/uption.service"]
depends = "libgcc1, libc6, systemd"
license-file = ["LICENSE"]
priority = "optional"
section = "utils"
