[package]
authors = [
  "Olli Paakkunainen <olli@paakkunainen.fi>",
  "Adarsh Krishnan <adarshk7@gmail.com>",
]
description = """
A tool to collect and export network performance metrics on Linux devices.
"""
documentation = "https://github.com/uption/uption/wiki"
edition = "2021"
exclude = [".github/*"]
homepage = "https://github.com/uption/uption"
keywords = ["network", "wifi", "metrics"]
license = "MIT"
name = "uption"
readme = "README.md"
repository = "https://github.com/uption/uption"
version = "0.6.6"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
crossbeam-channel = "0.5"
ctrlc = "3.2"
fern = "0.6"
log = "0.4"
rand = "0.8"
regex = "1.7"
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "native-tls-vendored",
] }
serde = { version = "1.0", features = ["derive"] }
hickory-client = { version = "0.24", default-features = false }
url = { version = "2.3", features = ["serde"] }
netlink_wi = "0.3"

[dev-dependencies]
mockito = "1.1"
rstest = "0.18"
assert_cmd = "2.0"

[package.metadata.deb]
assets = [
  [
    "target/release/uption",
    "/usr/bin/",
    "755",
  ],
  [
    "uption.toml",
    "/etc/uption/",
    "644",
  ],
  [
    "build/uption.service",
    "/etc/systemd/system/",
    "644",
  ],
]
conf-files = ["/etc/uption/uption.toml", "/etc/systemd/system/uption.service"]
depends = "libgcc1, libc6, systemd"
license-file = ["LICENSE"]
priority = "optional"
section = "utils"
